--- a/src/main/webapp/includes/base.html
+++ b/src/main/webapp/includes/base.html
@@ -23,7 +23,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">
+          <li class="nav-item"><a class="nav-link" href="adm.jsp">
             Administração</a></li>
           <li class="nav-item"><a class="nav-link" href="#"> Sala
             de Embarque</a></li>
