--- a/src/main/webapp/includes/base.html
+++ b/src/main/webapp/includes/base.html
@@ -25,11 +25,10 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="adm.jsp">
             Administração</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"> Sala
+          <li class="nav-item"><a class="nav-link" href="TabelaVoosEmbarque.jsp"> Sala
             de Embarque</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"> Sala
+          <li class="nav-item"><a class="nav-link" href="TabelaVoosDesembarque.jsp"> Sala
             de Desembarque</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Embarcando</a></li>
         </ul>
       </div>
     </div>
@@ -37,7 +36,7 @@
 </div>
 
 <div class="container text-center">
-  <img alt="" src="../images/profile_image.png">
+  <img alt="" src="/images/profile_image.png">
 </div>
 
 
