--- a/src/main/webapp/includes/base.html
+++ b/src/main/webapp/includes/base.html
@@ -1,11 +1,4 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: junior
-  Date: 21/11/24
-  Time: 16:59
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -33,9 +26,9 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="adm.jsp">
             Administração</a></li>
-          <li class="nav-item"><a class="nav-link" href="TabelaVoosEmbarque.jsp" action="adm.do?tabelaEmbarque"> Sala
+          <li class="nav-item"><a class="nav-link" href="TabelaVoosEmbarque.jsp"> Sala
             de Embarque</a></li>
-          <li class="nav-item"><a class="nav-link" href="TabelaVoosDesembarque.jsp" action="adm.do?tabelaDesembarque"> Sala
+          <li class="nav-item"><a class="nav-link" href="TabelaVoosDesembarque.jsp"> Sala
             de Desembarque</a></li>
         </ul>
       </div>
